test/bad/functions/variadic03.px

func f(Int... a: []) def
    return
